fixes some spacing issues

--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -10,13 +10,13 @@
 }
 
 .footer {
-  min-height: 34px;  
+  min-height: 40px;  
   background-color: #e6c68c;
   box-shadow: 2px 1px 2px 1px rgba(0, 0, 0, 0.2);
   font-family: Arial, Helvetica, sans-serif;
   left: 0;
-  margin-top: auto;
-  padding-top: 6px;
+  margin-top: 1em;
+  padding-top: .8em;
   bottom: 0;
   width: 100%;
   position: fixed;
@@ -24,5 +24,5 @@
   justify-content: center;
   color: #515480;
   font-weight: bold;
-  z-index: 1;
+  z-index: 60;
 }
