--- a/src/components/popup/PopUp.module.css
+++ b/src/components/popup/PopUp.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: .5em;
   right: .5em;
-  font-size: 1.3em;
+  font-size: 1em;
 }
 
 .popUp{
